--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-ccxt==1.60.1
+requests==2.26.0
+numpy==1.21.4
 pandas==1.3.3
-numpy==1.21.2
-python-telegram-bot==20.3
+python-binance==0.7.10
+python-telegram-bot==20.5
+TA-Lib==0.4.0
